syntax = "proto3";

package scheduler_protos;

service P2Scheduler {
  rpc AllocateNodes (AllocateNodesRequest) returns (AllocateNodesResponse) {}
  rpc DeallocateNodes (DeallocateNodesRequest) returns (DeallocateNodesResponse) {}
  rpc EligibleNodes (EligibleNodesRequest) returns (EligibleNodesResponse) {}
}

message AllocateNodesRequest {
  string manifest = 1;
  string node_selector = 2;
  int64 nodes_requested = 3;
  bool force = 4;
}

message AllocateNodesResponse {
  repeated string allocated_nodes = 1;
}

message DeallocateNodesRequest {
  repeated string nodes_released = 1;
  string node_selector = 2;
}

message DeallocateNodesResponse {}

message EligibleNodesRequest {
  string manifest = 1;
  string node_selector = 2;
}

message EligibleNodesResponse {
  repeated string eligible_nodes = 1;
}
